--- a/packer/files/lib/systemd/system/k8s-proxy.service
+++ b/packer/files/lib/systemd/system/k8s-proxy.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Kubernetes scheduler
+Description=Kubernetes proxy
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
 After=tinc@default.service
 
