--- a/packer/files/lib/systemd/system/k8s-kubelet.service
+++ b/packer/files/lib/systemd/system/k8s-kubelet.service
@@ -5,7 +5,12 @@ After=tinc@default.service
 
 [Service]
 EnvironmentFile=/etc/environment.calc
-ExecStart=/usr/bin/hyperkube kubelet --address=${IP_INT} --api-servers=http://localhost:8080 --cadvisor-port=0
+ExecStart=/usr/bin/hyperkube kubelet \
+  --address ${IP_INT} \
+  --api-servers http://localhost:8080 \
+  --tls-cert-file /etc/ssl/server.pem \
+  --tls-private-key-file /etc/ssl/server-key.pem \
+  --cadvisor-port 0
 Restart=on-failure
 # Type=notify # hyperkube seems not to signal
 LimitNOFILE=65536
