--- a/packer/files/lib/systemd/system/etcd.service
+++ b/packer/files/lib/systemd/system/etcd.service
@@ -8,16 +8,20 @@ TimeoutStartSec=0
 EnvironmentFile=/etc/environment.tf
 EnvironmentFile=/etc/environment.calc
 ExecStart=/usr/bin/etcd --name master${INDEX} \
-  --advertise-client-urls "http://${IP_INT}:2379" \
-  --listen-client-urls "http://${IP_INT}:2379,http://${IP_INT}:4001,http://localhost:2379,http://localhost:4001" \
-  --listen-peer-urls "http://${IP_INT}:2380,http://${IP_INT}:7001" \
   --data-dir /var/lib/etcd \
+  \
+  --listen-client-urls "https://${IP_INT}:2379,https://localhost:2379" \
+  --advertise-client-urls "https://${IP_INT}:2379" \
+  --client-cert-auth \
   --cert-file /etc/ssl/server.pem \
   --key-file /etc/ssl/server-key.pem \
-  --client-cert-auth --trusted-ca-file /etc/ssl/5pi-ca.pem \
+  --trusted-ca-file /etc/ssl/5pi-ca.pem \
+  \
+  --listen-peer-urls "https://${IP_INT}:2380" \
+  --peer-client-cert-auth \
   --peer-cert-file /etc/ssl/server.pem \
   --peer-key-file /etc/ssl/server-key.pem \
-  --peer-client-cert-auth --peer-trusted-ca-file /etc/ssl/5pi-ca.pem \
+  --peer-trusted-ca-file /etc/ssl/5pi-ca.pem \
   $OPTS
 ExecStop=/usr/bin/etcdctl \
   --ca-file /etc/ssl/5pi-ca.pem \
