Custom config and make image name deterministic

--- a/packer/Makefile
+++ b/packer/Makefile
@@ -1,14 +1,17 @@
 REVISION := $(shell git rev-parse --short HEAD)
 BRANCH   := $(shell git rev-parse --abbrev-ref HEAD)
 DO_TOKEN ?= $(shell cat ~/.do-token)
+CONFIG   ?= ../config
 
 all: check_dirty
-	source ../config/env && packer build \
+	source $(CONFIG)/env && packer build \
 		-var api_token=$(DO_TOKEN) \
 		-var revision=$(REVISION) \
 		-var branch=$(BRANCH) \
-		-var region=$(REGION)
-		base.json
+		-var region=$(REGION) \
+		-var config=$(CONFIG) \
+		-var build=0 \
+		base.json | tee
 
 check_dirty:
 	git status --porcelain | grep -q '^ M ' && false || true
