Generalize templates and update README

--- a/packer/Makefile
+++ b/packer/Makefile
@@ -4,14 +4,15 @@ DO_TOKEN ?= $(shell cat ~/.do-token)
 CONFIG   ?= ../config
 
 all: check_dirty
-	source $(CONFIG)/env && packer build \
+	. $(CONFIG)/env && packer build \
 		-var api_token=$(DO_TOKEN) \
 		-var revision=$(REVISION) \
 		-var branch=$(BRANCH) \
-		-var region=$(REGION) \
+		-var region=$$REGION \
 		-var config=$(CONFIG) \
 		-var build=0 \
-		base.json | tee
+		-machine-readable \
+		base.json
 
 check_dirty:
 	git status --porcelain | grep -q '^ M ' && false || true
