--- a/packer/files/lib/systemd/system/torusd.service
+++ b/packer/files/lib/systemd/system/torusd.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=torus storage daemon
-After=network-online.target tinc@default.service
+After=network-online.target etcd.service tinc@default.service
+Requires=tinc@default.service
 
 [Service]
 TimeoutStartSec=0
