--- a/packer/files/lib/systemd/system/k8s-scheduler.service
+++ b/packer/files/lib/systemd/system/k8s-scheduler.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=Kubernetes scheduler
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-After=tinc@default.service
+After=tinc@default.service k8s-apiserver.service
+Requires=k8s-apiserver.service
 
 [Service]
 EnvironmentFile=/etc/environment.calc
