--- a/packer/files/lib/systemd/system/node_exporter.service
+++ b/packer/files/lib/systemd/system/node_exporter.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Prometheus exporter for machine metrics
 Wants=basic.target
-After=basic.target network.target cloud-final.service
+After=basic.target network.target cloud-final.service tinc@default.service
 
 [Service]
 EnvironmentFile=/etc/environment.calc
