changed check_dirty to use git diff-index
Fixes a bug in the previous test for "dirty":
grep ... && false || true is always true

This expands the meaning of "dirty" to include:
changes that have been staged but not committed, and
changes that have not yet been staged

--- a/packer/Makefile
+++ b/packer/Makefile
@@ -15,4 +15,4 @@ all: check_dirty
 		base.json
 
 check_dirty:
-	git status --porcelain | grep -q '^ M ' && false || true
+	git diff-index --quiet HEAD
